# DIAP_Rust_SDK

./: .gitignore  CHANGELOG.md  CHANGELOG_v0.2.0.md  CROSS_PLATFORM_MIGRATION.md  Cargo.toml  DELIVERY_CHECKLIST.md  FIXES_SUMMARY.md  IDENTITY_MANAGER_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IPNS_PUBLISHING_GUIDE.md  LIBP2P_INTEGRATION_SUMMARY.md  LICENSE  NOIR_MIGRATION_SUCCESS.md  OPTIMIZATION_COMPLETE.md  PUBLISHING.md  README.md  README_IDENTITY_MANAGER.md  README_IPFS_IPNS.md  README_UPDATE_v0.2.0.md  RELEASE_CHECKLIST.md  ZKP_ARCHITECTURE.md  anp-config.example.toml  build.rs  config.example.toml  diap-config.example.toml  main.rs  package.json  zkp_proving.key  zkp_verifying.key
examples/: agent_auth_demo.rs  agent_verification_demo.rs  auto_update_demo.rs  basic_agent_with_did_web.rs  batch_upload_demo.rs  complete_agent_with_ipfs.rs  complete_auth_demo.rs  cross_platform_demo.rs  did_resolver_demo.rs  identity_quickstart.rs  ipfs_bidirectional_verification_demo.rs  ipfs_ipns_basic.rs  ipfs_only_demo.rs  ipfs_registry_demo.rs  ipfs_upload_demo.rs  iroh_api_exploration.rs  iroh_basic_test.rs  iroh_complete_closed_loop.rs  iroh_encrypted_id_demo.rs  iroh_pubsub_complete_demo.rs  iroh_real_working_p2p.rs  libp2p_did_complete.rs  noir_agent_demo.rs  noir_auth_demo.rs  p2p_communication_demo.rs  pubsub_auth_demo.rs  pubsub_demo.rs  pubsub_verification_loop_demo.rs  test_ipns_publish.rs  two_node_pubsub_demo.rs  unified_identity_demo.rs  unified_zkp_demo.rs  zkp_identity_demo.rs  zkp_setup_keys.rs
noir_circuits/: Prover.toml
src/: agent_auth.rs  agent_verification.rs  anp_key_generator.rs  auto_config.rs  batch_uploader.rs  config_manager.rs  diap_key_generator.rs  did_auto_config.rs  did_builder.rs  did_cache.rs  did_resolver.rs  encrypted_peer_id.rs  http_auto_config.rs  identity_manager.rs  ipfs_bidirectional_verification.rs  ipfs_client.rs  ipfs_node_manager.rs  ipfs_registry.rs  ipns_publisher.rs  iroh_communicator.rs  iroh_node.rs  key_generator.rs  key_manager.rs  kubo_installer.rs  lib.rs  libp2p_identity.rs  libp2p_network.rs  libp2p_node.rs  main.rs  noir_embedded.rs  noir_universal.rs  noir_verifier.rs  noir_zkp.rs  nonce_manager.rs  p2p_communicator.rs  pubsub_authenticator.rs  startup_manager.rs  unified_zkp.rs  zkp_circuit.rs  zkp_prover.rs  (+1 more)
