[package]
name = "diap-rs-sdk"
version = "0.1.4"
edition = "2021"
authors = ["liuyuanjie <2844169590@qq.com>"]
description = "DIAP Rust SDK - Decentralized Intelligent Agent Protocol，提供完整的去中心化智能体基础设施，包括 libp2p P2P 网络、IPFS/IPNS 存储、DID 身份认证"
license = "MIT"
   repository = "https://github.com/logos-42/DIAP_Rust_SDK"
homepage = "https://alou.fun"
documentation = "https://alou.fun"
readme = "README.md"
keywords = ["diap", "agent", "decentralized", "p2p", "ipfs"]
categories = ["network-programming", "web-programming", "authentication", "cryptography", "asynchronous"]
exclude = [
    
    
]
[dependencies]
# HTTP服务器
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密和密钥生成
ed25519-dalek = "2.0"
secp256k1 = "0.28"
x25519-dalek = "2.0"
rand = "0.8"
bs58 = "0.5"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"  # 私钥加密

# IPFS/IPNS
cid = "0.10"
multihash = "0.18"
# w3name将在后续添加（需要确认版本）

# libp2p核心
libp2p = { version = "0.53", features = [
    "tcp",                # TCP传输
    "noise",              # Noise协议加密
    "yamux",              # Yamux多路复用
    "kad",                # Kademlia DHT
    "identify",           # 节点识别
    "ping",               # Ping协议
    "request-response",   # 请求响应协议
    "mdns",               # 本地网络发现
    "tokio",              # Tokio运行时
] }
libp2p-identity = { version = "0.2", features = ["ed25519", "secp256k1"] }

# 网络和系统
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# 配置和存储
toml = "0.8"
sled = "0.34"  # 嵌入式数据库用于缓存
directories = "5.0"  # 跨平台目录

# 日志
log = "0.4"
env_logger = "0.10"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步运行时
futures = "0.3"
prost = "0.12"

argon2 = "0.5"

# 缓存
dashmap = "5.5"
parking_lot = "0.12"

# 文件系统
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[example]]
name = "basic_http_config"
path = "examples/basic_http_config.rs"

[[example]]
name = "basic_did_config"
path = "examples/basic_did_config.rs"

[[example]]
name = "full_diap_agent"
path = "examples/full_diap_agent.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"

[[example]]
name = "ipfs_ipns_basic"
path = "examples/ipfs_ipns_basic.rs"

