[package]
name = "diap-rs-sdk"
version = "0.2.3"
edition = "2021"
authors = ["liuyuanjie <2844169590@qq.com>"]
description = "DIAP Rust SDK - 基于零知识证明的去中心化智能体身份协议，使用ZKP验证DID-CID绑定，无需IPNS"
license = "MIT"
   repository = "https://github.com/logos-42/DIAP_Rust_SDK"
homepage = "https://alou.fun"
documentation = "https://alou.fun"
readme = "README.md"
keywords = ["diap", "agent", "decentralized", "p2p", "ipfs"]
categories = ["network-programming", "web-programming", "authentication", "cryptography", "asynchronous"]
exclude = [
    
      "target/",
    ".git/",
    "*.log",
    ".vscode/",
    ".idea/",
]
[dependencies]
# HTTP服务器
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密和密钥生成
ed25519-dalek = "2.0"
secp256k1 = "0.28"
x25519-dalek = "2.0"
rand = "0.8"
bs58 = "0.5"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"  # 私钥加密

# IPFS/IPNS
cid = "0.10"
multihash = "0.18"
# w3name将在后续添加（需要确认版本）

# libp2p核心
libp2p = { version = "0.53", features = [
    "tcp",                # TCP传输
    "noise",              # Noise协议加密
    "yamux",              # Yamux多路复用
    "kad",                # Kademlia DHT
    "identify",           # 节点识别
    "ping",               # Ping协议
    "request-response",   # 请求响应协议
    "mdns",               # 本地网络发现
    "tokio",              # Tokio运行时
    "macros",             # NetworkBehaviour派生宏
    "gossipsub",          # Pubsub协议
] }
libp2p-identity = { version = "0.2", features = ["ed25519", "secp256k1"] }

# Iroh - 下一代P2P网络（预留）
# iroh = "0.11"  # 待启用
iroh-net = { version = "0.11", optional = true }  # Iroh网络层

# 网络和系统
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# 配置和存储
toml = "0.8"
sled = "0.34"  # 嵌入式数据库用于缓存
directories = "5.0"  # 跨平台目录

# 日志
log = "0.4"
env_logger = "0.10"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 异步运行时
futures = "0.3"
prost = "0.12"

argon2 = "0.5"

# 缓存
dashmap = "5.5"
parking_lot = "0.12"

# 文件系统
dirs = "5.0"

# ZKP - arkworks生态系统
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-crypto-primitives = "0.4"

# Blake2哈希（用于ZKP电路）
blake2 = "0.10"

# 序列化
bincode = "1.3"

[features]
default = []
iroh = ["iroh-net"]  # 启用Iroh支持

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

# 示例程序会自动从 examples/ 目录发现，无需显式配置

